; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_pngenc.c_png_get_gama.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_pngenc.c_png_get_gama.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @png_get_gama to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @png_get_gama(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca double, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call double @avpriv_get_gamma_from_trc(i32 %7)
  store double %8, double* %6, align 8
  %9 = load double, double* %6, align 8
  %10 = fcmp ole double %9, 0x3EB0C6F7A0B5ED8D
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %17

12:                                               ; preds = %2
  %13 = load i32*, i32** %5, align 8
  %14 = load double, double* %6, align 8
  %15 = fdiv double 1.000000e+00, %14
  %16 = call i32 @AV_WB32_PNG(i32* %13, double %15)
  store i32 1, i32* %3, align 4
  br label %17

17:                                               ; preds = %12, %11
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local double @avpriv_get_gamma_from_trc(i32) #1

declare dso_local i32 @AV_WB32_PNG(i32*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
